--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,9 @@ body {
   margin: 60px 0px 50px 0px;
 }
 
-
+.container {
+  min-width: 440px;
+}
 
 /* SECTION: HOME */
 
@@ -263,11 +265,23 @@ body {
   border-width: 10px;
 }
 
-.project-item-info-full-width {
+.project-item-small-width {
+  background-color: var(--my-grey);
+  border-radius: 10px;
+  width: 390px;
+  height: 400px;
+  margin: auto;
+  padding: 10px;
+  border-style: solid;
+  border-color: var(--aboutMe-section-background);
+  border-width: 10px;
+}
+
+/*.project-item-info-full-width {
   width: 780px;
   height: 400px;
   float: left;
-}
+}*/
 
 .project-item-info {
   width: 390px;
